# CompletionTracker

./: .gitignore  Cargo.toml  FEATURES.md  README-JP.md  README.md  TODO.md  build.rs  generate_docs.py  runInfo.json
assets/: main.html
assets/css/: form.css  theme.css  utilities.css  utils.css
assets/htmlComponents/: dropdownMenu.vue  focusableA.vue  mainView.vue  myButton.vue  stateSwapper.vue  tooltip.vue
assets/htmlComponents/content/: footerContent.vue  headerNavContent.vue  universeNewContent.vue  universesContent.vue
assets/htmlComponents/forms/: contentLangPicker.vue  formArea.vue  formFile.vue  formMultiCreate.vue  formSelect.vue  itemPicker.vue  itemPickerList.vue  relatedLinkInput.vue  selectList.vue
assets/htmlComponents/results/: createdResult.vue  errorResult.vue  loadingResult.vue  successResult.vue
assets/htmlComponents/routerComponents/: error404View.vue  homeView.vue  (+6 more)
assets/htmlPartials/: footer.hbs  header.hbs  html_head.hbs
assets/htmlTemplates/: 404.hbs  home.hbs  sources_new.hbs  universe_edit.hbs  universe_new.hbs  universes.hbs
assets/js/: custom.js  langStrings.js  plugin.js  settings.js
completion_tracker_android/: TODO
completion_tracker_lib/: Cargo.toml
completion_tracker_lib/src/: db_link.rs  lib.rs  sources.rs  tracking.rs  utils.rs
completion_tracker_lib/src/sources/: api.rs  simple_enum.rs  source_types.rs
completion_tracker_lib/src/sources/api/: character.rs  people.rs  search.rs  universe_tag.rs
completion_tracker_lib/src/sources/api/character/: create.rs
completion_tracker_lib/src/sources/api/people/: create.rs
completion_tracker_lib/src/sources/api/search/: search_score.rs
completion_tracker_lib/src/sources/api/universe_tag/: create.rs  read.rs
completion_tracker_lib/src/sources/source_types/: roles.rs
htmlComponents/: dropdownMenu.vue  headerNav.vue
htmlComponents/content/: universeNewContent.vue  universesContent.vue
htmlComponents/forms/: formSelect.vue
htmlPartials/: footer.hbs  header.hbs  html_head.hbs  sources_search.hbs
htmlStatic/css/: theme.css
htmlTemplates/: 404.hbs  home.hbs  sources.hbs  sources_new.hbs  universe_edit.hbs  universe_new.hbs  universes.hbs
src/: api.rs  api_json.rs  automate.rs  html_gen.rs  lang.rs  logging.rs  main.rs  run_info.rs  settings.rs  source.rs  source_concrete.rs  static_serve.rs  static_server.rs  tracking.rs  types.rs  utils.rs
src/api/: data.rs  endpoints.rs  html_gen.rs  html_interface.rs  html_pages.rs  lang_impl.rs  static_serve.rs  ui.rs
src/api_json/: search.rs  universe_tag.rs
src/lang/: enum_translate.rs  err.rs  lang_impl.rs  ui.rs
src/source/: character.rs  company.rs  err.rs  misc_types.rs  person.rs  source.rs  source_db.rs  source_image.rs  source_info.rs  source_lang.rs  ui.rs  universe.rs
src/source_concrete/: source_db.rs  source_image.rs
staticServe/css/: custom.css
staticServe/js/: custom.js
(+7 files in other folders)
