[package]
name = "complete-tracker"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

[dependencies]
# The HTTP server
rouille = "3.0.0"

# The HTML rendering engine
handlebars = "1.1.0"

# Enable lazy expressions
lazy_static = "1.3.0"

# Use Serde's JSON library for JSON serialization
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"

# For regular expressions
regex = "1.1.6"

# The HTTP client to make calls elsewhere
reqwest = "0.9.16"

# For dates and other time related utilities
time = "0.1.42"

# For handling images
image = "0.21.1"

# So that we can use Base64 strings
base64 = "0.10.1"
