[package]
name = "completion-tracker"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

[dependencies]
# The HTTP server
rouille = "3.0.0"

# The HTML rendering engine
handlebars = "2.0.1"

# Use Serde's JSON library for JSON serialization
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"

# The HTTP client to make calls elsewhere
reqwest = "0.9.18"

# For dates and other time related utilities
time = "0.1.42"

# For handling images
image = "0.21.2"

# So that we can use Base64 strings
base64 = "0.10.1"

# For easy logging
log = "0.4.7"
