[package]
name = "completion_tracker"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
completion_tracker_lib = { path = "./completion_tracker_lib" }

rouille = "3.0.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
