[package]
name = "completion_tracker_lib"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"

# Use Serde's JSON library for JSON serialization
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled", "chrono", "url"]
